--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ install:
     - bash setup.sh # Running again should do nothing
 
 script:
-    - bash setup.sh -b foo/bar || true 2> err.log && grep --silent 'Error'
+    - bash setup.sh -b foo/bar 2> err.log || true && grep --silent 'Error' err.log && rm err.log
     - cd test && bash test.sh
