--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,6 @@ install:
 
 script:
     - bash setup.sh -b foo/bar 2> err.log || true && grep --silent 'Error' err.log && rm err.log
-    - cd test && Rscript testthat.R
-    - cd test && python test_cnv_facets.py
+    - cd test 
+    - Rscript testthat.R
+    - python test_cnv_facets.py
