--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 sudo: false
-language: bash
+language: r
 dist: trusty
 
+r_github_packages:
+  - r-lib/covr
+
 before_install:
-    - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9 # To enable cran.r-project.org
-    - echo 'deb http://cran.r-project.org/bin/linux/ubuntu trusty/' | sudo tee -a /etc/apt/sources.list
-    - sudo apt-get -y update
-    - sudo apt-get -y install r-base
+    #- sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9 # To enable cran.r-project.org
+    #- echo 'deb http://cran.r-project.org/bin/linux/ubuntu trusty/' | sudo tee -a /etc/apt/sources.list
+    #- sudo apt-get -y update
+    #- sudo apt-get -y install r-base
     - mkdir -p ~/R/library && echo '.libPaths(c("~/R/library", .libPaths()))' >> ~/.Rprofile # Pick a writable dir for R packages
 
 install:
@@ -19,3 +22,7 @@ script:
     - cd test 
     - Rscript testthat.R
     - python test_cnv_facets.py
+
+after_success:
+  - cd test
+  - Rscript covr.R 
