--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ sudo: false
 language: r
 dist: trusty
 
-r_github_packages:
-  - r-lib/covr
-
 before_install:
+    ## For manual installation of R:
     #- sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9 # To enable cran.r-project.org
     #- echo 'deb http://cran.r-project.org/bin/linux/ubuntu trusty/' | sudo tee -a /etc/apt/sources.list
     #- sudo apt-get -y update
@@ -24,5 +22,4 @@ script:
     - python test_cnv_facets.py
 
 after_success:
-  - cd test
-  - Rscript covr.R 
+    - Rscript covr.R 
