--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,6 @@ sudo: false
 language: r
 dist: trusty
 
-#before_install:
-#    ## For manual installation of R:
-#    #- sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9 # To enable cran.r-project.org
-#    #- echo 'deb http://cran.r-project.org/bin/linux/ubuntu trusty/' | sudo tee -a /etc/apt/sources.list
-#    #- sudo apt-get -y update
-#    #- sudo apt-get -y install r-base
-#    - mkdir -p ~/R/library && echo '.libPaths(c("~/R/library", .libPaths()))' >> ~/.Rprofile # Pick a writable dir for R packages
-
 install:
     - bash setup.sh --help
     - bash setup.sh --skip_test 
@@ -19,7 +11,7 @@ script:
     - bash setup.sh -b foo/bar 2> err.log || true && grep --silent 'Error' err.log && rm err.log
     - cd test 
     - Rscript testthat.R
-    - python test_cnv_facets.py
+    - python3 test_cnv_facets.py
 
 after_success:
     - Rscript covr.R 
