--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
     - bash setup.sh -b foo/bar 2> err.log || true && grep --silent 'Error' err.log && rm err.log
     - cd test 
     - Rscript testthat.R
-    - python3 test_cnv_facets.py
+    - chmod a+x test_cnv_facets.py && ./test_cnv_facets.py
 
 after_success:
     - Rscript covr.R 
