Run in batch mode

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Conda env setup
         run: |
           curl -L -O "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-$(uname)-$(uname -m).sh"
-          bash Miniforge3-$(uname)-$(uname -m).sh
+          bash -b Miniforge3-$(uname)-$(uname -m).sh
 
           conda create -n cnv_facets
           conda activate cnv_facets
