--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Conda env setup
         run: |
           curl -L -O "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-$(uname)-$(uname -m).sh"
-          bash -b Miniforge3-$(uname)-$(uname -m).sh
+          bash Miniforge3-$(uname)-$(uname -m).sh -b
 
-          conda create -n cnv_facets
+          conda create --yes -n cnv_facets
           conda activate cnv_facets
-          conda install -c bioconda -c conda-forge cnv_facets
+          conda install --yes -c bioconda -c conda-forge cnv_facets
