--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CI
 on: [push]
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, ubuntu-20.04]
     steps:
       - uses: actions/checkout@v3
       - uses: conda-incubator/setup-miniconda@v2
